--- a/README.Rmd
+++ b/README.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Analysis of T$_{\\text{RM}}$ population dynamics"
+title: "Analysis of T<sub>RM</sub> population dynamics"
 output: github_document
 ---
 
@@ -9,28 +9,23 @@ MathJax.Hub.Config({
 });
 </script>-->
 
-This approach illustrates how a simple mathematical model can be applied to experimental data of T$_{\text{RM}}$ in nonlymphoid tissues. The aim is to estimate the clonal half-life of each population and project dynamics beyond experimental timeframes. 
+This approach illustrates how a simple mathematical model can be applied to experimental data of T<sub>RM</sub> in nonlymphoid tissues. The aim is to estimate the clonal half-life of each population and project dynamics beyond experimental timeframes. 
 
 ### Modeling approach
 
-A simple model of homeostasis assumes new T$_{\text{RM}}$ cells ($T$) are recruited from a precursor subset at rate $r$, proliferate at rate $p$, and decay at rate $d$. These dynamics be expressed mathematically as
+A simple model of homeostasis assumes new T<sub>RM</sub> cells ($T$) are recruited from a precursor subset at rate $r$, proliferate at rate $p$, and decay at rate $d$. These dynamics be expressed mathematically as
 
-\begin{align}
-\frac{dT}{dt} &= r + p T - d T\nonumber \\
-& = r - (d - p)T, 
-\end{align}
+$$\begin{aligned} \frac{dT}{dt} & = r + p T - d T \\ & = r - (d - p)T, \end{aligned}$$
+
 where $d-p$ is the net loss rate from the population. If there is no recruitment from precursor populations, then $r=0$ and Eqn 1 can be solved to give
 
-\begin{align}
-T = T^0 \exp^{- (d-p)t},
-\end{align}
-where $T^0$ is the initial number of T$_{\text{RM}}$. Thus, assuming cells are lost at a faster rate than they divide (i.e. $d > p$), the clonal population will decline exponentially at rate $(d-p)$, with an average half-life of $\log(2)/(d-p)$. 
+$$ T = T^0 \exp^{- (d-p)t},$$
 
-T$_{\text{RM}}$ loss can be modeled by log-transforming Eq 2 to obtain a linear regression model with intercept $\log(T^0)$ and slope $-(d-p)$, i.e.
+where $T^0$ is the initial number of T<sub>RM</sub>. Thus, assuming cells are lost at a faster rate than they divide (i.e. $d > p$), the clonal population will decline exponentially at rate $(d-p)$, with an average half-life of $\log(2)/(d-p)$. 
 
-\begin{align}
-\log(T) = \log(T^0) - (d-p)t.
-\end{align}
+T<sub>RM</sub> loss can be modeled by log-transforming Eq 2 to obtain a linear regression model with intercept $\log(T^0)$ and slope $-(d-p)$, i.e.
+
+$$ \log(T) = \log(T^0) - (d-p)t.$$
 
 Using least squares optimization, we fit Eq 3 to the log-transformed measurements from each dataset and estimate the corresponding net loss rate and clonal half-life.
 For more details on motivation for the model, see Morris et al (2019) Journal of Immunology. Details of the data can be found in:
@@ -47,16 +42,14 @@ knitr::opts_chunk$set(echo = TRUE, warning = FALSE, message = FALSE, cache = FAL
 
 ### Analysis
 
-To implement the analysis in R, we use the following steps.
-
-1. Load the required packages:
+To implement the analysis in R, we first load the required packages:
 
 ```{r packages}
 require(tidyverse)
 require(cowplot)
 ```
 
-2. Define settings for the final plot:
+Then define settings for the final plot:
 
 ```{r plotsettings}
 basetext <- 10
@@ -76,7 +69,7 @@ textsize <- 10
 
 ```
 
-3. Define functions that will be used in the analysis. Note that for the response variable we use the approximation $\log$(T$_{\text{RM}} + 1$) to avoid NAs when T$_{\text{RM}} = 0$. This does not substantially impact our results, and is preferable to omitting important information contained in those undetectable measurements.
+We then define functions that will be used in the analysis. Note that for the response variable we use the approximation $\log$(T<sub>RM</sub> + 1) to avoid NAs when T<sub>RM</sub> = 0. This does not substantially impact our results, and is preferable to omitting important information contained in those undetectable measurements.
 
 ```{r functions}
 # 1. Estimate parameters and 95% CIs by fitting linear model
@@ -109,14 +102,14 @@ getpredictions <- function(data, xnew){
 }
 ```
 
-4. Load the data:
+After this, we load the data:
 
 ```{r data}
 load("data_pizzolla.RData")
 load("data_slutter.RData")
 ```
 
-5. Carry out analysis for each data set:
+And carry out analysis for each data set:
 
 ```{r pizzolla}
 ## Pizzolla et al analysis ----------------------------------
@@ -146,7 +139,7 @@ predict_slutter <- data_slutter %>% group_by(tissue, study) %>%
     do(getpredictions(data = ., xnew = xnew) ) %>% ungroup()
 ```
 
-6. Plot the results:
+Then we plot the results:
 
 ```{r plotting, fig.width = 8}
 
@@ -181,7 +174,7 @@ print(
 )
 ```
 
-7. Finally, to estimate the time at which OT-I (Panel A) and NP366 (Panel B) T$_{\text{RM}}$ in the lung become undetectable, we simply find the first time at which their predicted population sizes fall below one:
+Finally, to estimate the time at which OT-I (Panel A) and NP366 (Panel B) T<sub>RM</sub> in the lung become undetectable, we simply find the first time at which their predicted population sizes fall below one:
 
 ```{r undetectable}
 predict_pizzolla %>% filter(tissue == "Lung", Trm < 1) %>% 
