--- a/README.Rmd
+++ b/README.Rmd
@@ -49,7 +49,7 @@ require(tidyverse)
 require(cowplot)
 ```
 
-Then define settings for the final plot:
+And define settings for the final plot:
 
 ```{r plotsettings}
 basetext <- 10
